// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Atoms/Button default 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button info 1`] = `
<button
  class="ui-button ui-button--small ui-button--primary"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button render as a different element 1`] = `
<a
  class="ui-button ui-button--medium ui-button--default"
>
  Call to action
</a>
`;

exports[`Storyshots Components/Atoms/Button with clear modifier 1`] = `
<button
  class="ui-button ui-button--medium ui-button--clear ui-button--clear--default"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with custom content 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  <em
    class="custom ui-button__content ui-button__content--medium"
  >
    Call
  </em>
  <span
    class="ui-button__content ui-button__content--medium"
  >
    to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with custom css-module class names 1`] = `
<button
  class="root medium default"
>
  <i
    class="ui-icon content content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    class="content content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with different icon size 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  <i
    class="ui-icon ui-button__content ui-button__content--medium ui-icon--large"
  >
    backup
  </i>
  <span
    class="ui-button__content ui-button__content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with fragment child 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  Next
</button>
`;

exports[`Storyshots Components/Atoms/Button with imported css-module class names 1`] = `
<button
  class="root medium default"
>
  <i
    class="ui-icon content content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    class="content content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with inline modifier 1`] = `
<button
  class="ui-button ui-button--medium ui-button--inline ui-button--inline--default ui-button--clear ui-button--clear--default"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with kind modifer 1`] = `
<button
  class="ui-button ui-button--medium ui-button--danger"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with kind size modifier 1`] = `
<button
  class="ui-button ui-button--large ui-button--default"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with left icon 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  <i
    class="ui-icon ui-button__content ui-button__content--medium ui-icon--medium"
  >
    backup
  </i>
  <span
    class="ui-button__content ui-button__content--medium"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with null children 1`] = `
<button
  class="ui-button ui-button--medium ui-button--default"
>
  <i
    class="ui-icon ui-button__content ui-button__content--medium ui-icon--large"
  >
    backup
  </i>
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline kind modifer 1`] = `
<button
  class="ui-button ui-button--medium ui-button--outline ui-button--outline--danger ui-button--outline--medium"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline modifer 1`] = `
<button
  class="ui-button ui-button--medium ui-button--outline ui-button--outline--default ui-button--outline--medium"
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with outline size modifer 1`] = `
<button
  class="ui-button ui-button--large ui-button--outline ui-button--outline--default ui-button--outline--large"
>
  Call to action
</button>
`;
